# mega-experiment

./: .gitignore  README.md  pyproject.toml
mega_experiment/: datasets.py
mega_experiment/job_runner/: instance_runner.py  instance_runner_test.py  job_runner.py  training_job.py
mega_experiment/models/: resnet.py
mega_experiment/training_jobs/: example_training_job.py  training_job.py
mega_experiment/training_jobs/cifar_double_descent/: job_definition.py  run.py
mega_experiment/training_jobs/example/: job_definition.py  run.py
scripts/: run_example_job.py
